add statistics property test case and new statistics items

--- a/server/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/server/src/main/resources/password/pwm/i18n/Admin.properties
@@ -126,6 +126,8 @@ Confirm_Report_Clear=Do you wish clear the cached report data?  <br/><br/>This w
 Display_Report_Action_Start=Sending request to start report engine.
 Display_Report_Action_Stop=Sending request to stop the report engine.
 Display_Report_Action_Clear=Sending request to clear the cached report data.
+Statistic_Label.AuditEvents=Audit Events
+Statistic_Description.AuditEvents=Number of audit events generated and stored locally.
 Statistic_Label.Authentications=Authentications
 Statistic_Description.Authentications=Number of successful user authentications that have occurred.
 Statistic_Label.AuthenticationFailures=Authentication Failures
@@ -272,15 +274,17 @@ Statistic_Label.ForeignSessionsAccepted=Foreign Sessions Accepted
 Statistic_Description.ForeignSessionsAccepted=Number of sessions generated on a foreign or server or previous instance of this server and accepted as valid authentication.
 Statistic_Label.ObsoleteUrlRequests=Obsolete URL Requests
 Statistic_Description.ObsoleteUrlRequests=Number of web requests to obsolete URLs.
-Statistic_Label.EpsStatistic_REQUESTS=Requests
-Statistic_Label.EpsStatistic_SESSIONS=Sessions
-Statistic_Label.EpsStatistic_PASSWORD_CHANGES=Password Changes
-Statistic_Label.EpsStatistic_AUTHENTICATION=Authentications
-Statistic_Label.EpsStatistic_INTRUDER_ATTEMPTS=Intruder Attempts
-Statistic_Label.EpsStatistic_PWMDB_READS=LocalDB Reads
-Statistic_Label.EpsStatistic_PWMDB_WRITES=LocalDB Writes
-Statistic_Label.EpsStatistic_DB_READS=Database Reads
-Statistic_Label.EpsStatistic_DB_WRITES=Database Writes
+Statistic_Label.SyslogMessagesSent=Syslog Messages Sent
+Statistic_Description.SyslogMessagesSent=Number of successfully sent syslog messages.
+EpsStatistic_Label.REQUESTS=Requests
+EpsStatistic_Label.SESSIONS=Sessions
+EpsStatistic_Label.PASSWORD_CHANGES=Password Changes
+EpsStatistic_Label.AUTHENTICATION=Authentications
+EpsStatistic_Label.INTRUDER_ATTEMPTS=Intruder Attempts
+EpsStatistic_Label.PWMDB_READS=LocalDB Reads
+EpsStatistic_Label.PWMDB_WRITES=LocalDB Writes
+EpsStatistic_Label.DB_READS=Database Reads
+EpsStatistic_Label.DB_WRITES=Database Writes
 Title_About=About
 Title_DirectoryReporting=Directory Reporting
 Title_DataViewer=Data Viewer
