new setting for 'allow change password action when within minimum password lifetime' and associated functionality.

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -86,7 +86,8 @@ Category_Description_PASSWORD_GLOBAL=Password related settings that apply to all
 Category_Description_PASSWORD_POLICY=Settings that define the LDAP directories that are used by the application.  If the user identities are in multiple LDAP directories, configure each directory as an LDAP Directory Profile.  Within each LDAP directory profile definition, you can control the individual servers and other settings for each LDAP directory.
 Category_Description_PEOPLE_SEARCH=The people search module provides basic white pages or directory lookup functionality to your users.  Customizations allow easy searching and display quick detailed information about your users' colleagues.
 Category_Description_PROFILES=Profiles
-Category_Description_RECOVERY_DEF=Definition
+Category_Description_RECOVERY_ACTIONS=Action
+Category_Description_RECOVERY_DEF=Verification
 Category_Description_RECOVERY_OAUTH=OAuth
 Category_Description_RECOVERY=Policies for forgotten password configuration.
 Category_Description_RECOVERY_PROFILE=Policies for forgotten password configuration.
@@ -180,7 +181,8 @@ Category_Label_PASSWORD_GLOBAL=Password Settings
 Category_Label_PASSWORD_POLICY=Password Policies
 Category_Label_PEOPLE_SEARCH=People Search
 Category_Label_PROFILES=Policies
-Category_Label_RECOVERY_DEF=Definition
+Category_Label_RECOVERY_ACTIONS=Action
+Category_Label_RECOVERY_DEF=Verification
 Category_Label_RECOVERY=Forgotten Password
 Category_Label_RECOVERY_OAUTH=OAuth
 Category_Label_RECOVERY_PROFILE=Profiles
@@ -238,7 +240,7 @@ Setting_Description_challenge.allowSetup.queryMatch=Specify the permissions used
 Setting_Description_challenge.allowUnlock=Enable this option if @PwmAppName@ allows user accounts to be unlocked during forgotten password.  If true, and if the users' accounts are locked due to too many invalid login attempts, and the users' passwords are not expired, then @PwmAppName@ gives the users a chance to unlock their accounts instead of resetting their passwords.
 Setting_Description_challenge.caseInsensitive=Enable to control the case sensitivity of responses.  If enabled, then @PwmAppName@ deems the responses correct even if the case is wrong.  Changing this value does not change existing stored responses -- @PwmAppName@ saves the case sensitive flag on each users' stored responses.
 Setting_Description_challenge.enable=Enable this option to have the save responses page available to users. (Default enabled)
-Setting_Description_challenge.enforceMinimumPasswordLifetime=Enable this option to enforce the minimum password lifetime setting when the users authenticate via Forgotten Password. If this setting is true, the users cannot change their passwords if the minimum password lifetime setting has not passed.  If false, @PwmAppName@ permits the users to change their passwords when they are authenticated via Forgotten Password even if the minimum lifetime setting has not passed.
+Setting_Description_challenge.enforceMinimumPasswordLifetime=Enable this option to allow users to start the forgotten password process if the user's last password change occured within the minimum password lifetime policy for that user.  This setting applies prior to the user identification (email token, challenge/response, etc) sequence.  See also <code>@PwmSettingReference\:recovery.allowChangePwWithinMinLifetime@</code>.
 Setting_Description_challenge.forceSetup=Enable this option to direct the users to configure Challenge/Response when they log in.  @PwmAppName@ forces the users to enter responses if they do not have current valid responses stored.
 Setting_Description_challenge.helpdesk.minRandomsSetup=Specify the minimum number of Help Desk random questions you require the users to complete during the Response Setup.  If this number is higher than the available randoms, or lower than the minimum required, the system adjusts it accordingly.  Set this option to zero to force the users to configure all available randoms Challenge/Response questions at the time of setup.
 Setting_Description_challenge.helpdesk.randomChallenges=Specify additional random questions to present to the help desk users. @PwmAppName@ might require the users to supply answers to all or some of these questions when setting up their responses, as controlled by the "Minimum Help Desk Random Challenges Required During Setup" setting.  The questions and answers are visible to Help Desk users but are not used for forgotten password recovery.
@@ -587,6 +589,7 @@ Setting_Description_pwm.seedlist.location=Specify the location of the seed list 
 Setting_Description_pwm.selfURL=<p>The URL to this application, as seen by users. @PwmAppName@ uses the value in email macros and other user-facing communications.</p><p>The URL must use a valid fully qualified hostname. Do not use a network address.</p><p>In simple environments, the URL will be the base of the URL in the browser you are currently using to view this page, however in more complex environments the URL will typically be an upstream proxy, gateway or network device.</p><p>The URL should include the path to the base application, typically <code>/@Case:lower:[[@PwmAppName@]]@</code>.</p>
 Setting_Description_pwm.wordlist.location=Specify a word list file URL for dictionary checking to prevent users from using commonly used words as passwords.   Using word lists is an important part of password security.  Word lists are used by intruders to guess common passwords.   The default word list included contains commonly used English passwords.  <br/><br/>The first time a startup occurs with a new word list setting, it takes some time to compile the word list into a database.  See the status screen and logs for progress information.  The word list file format is one or more text files containing a single word per line, enclosed in a ZIP file.  The String <i>\!\#comment\:</i> at the beginning of a line indicates a comment. <br/><br/>The value must be a valid URL, using the protocol "file" (local file system), "http", or "https".
 Setting_Description_recovery.action=Add actions to take when the user completes the forgotten password process.
+Setting_Description_recovery.allowChangePwWithinMinLifetime=After identity verification, this setting controls if the user can elect to change their password if the time since the last password change is within the minimum password lifetime policy of the user.   See also: <code>@PwmSettingReference\:challenge.enforceMinimumPasswordLifetime@</code>.
 Setting_Description_recovery.allowWhenLocked=Enable this option to allow users to use the forgotten password feature when the account is intruder locked in LDAP.  This feature is not available when a user is using NMAS stored responses.
 Setting_Description_recovery.enable=Enable this option to have the forgotten password recovery available to users.
 Setting_Description_recovery.form=Specify the form fields for the activate user module. @PwmAppName@ requires the users to enter each attribute. Ideally, @PwmAppName@ requires the users to enter some personal data that is not publicly known.
@@ -715,7 +718,7 @@ Setting_Label_cas.clearPass.key=CAS ClearPass Encryption Key
 Setting_Label_cas.clearPass.alg=CAS ClearPass Algorithm
 Setting_Label_challenge.allowDuplicateResponses=Allow Duplicate Responses
 Setting_Label_challenge.allowSetup.queryMatch=Save Challenge Permission
-Setting_Label_challenge.allowUnlock=Allow Unlock
+Setting_Label_challenge.allowUnlock=Allow Unlock Action if Intruder Locked
 Setting_Label_challenge.caseInsensitive=Case Insensitive Responses
 Setting_Label_challenge.enable=Enable Setup Responses
 Setting_Label_challenge.enforceMinimumPasswordLifetime=Enforce Minimum Password Lifetime
@@ -1067,7 +1070,8 @@ Setting_Label_pwm.seedlist.location=Seed List File URL
 Setting_Label_pwm.selfURL=Site URL
 Setting_Label_pwm.wordlist.location=Word List File URL
 Setting_Label_recovery.action=Forgotten Password Recovery Mode
-Setting_Label_recovery.allowWhenLocked=Allow Forgotten Password when Locked
+Setting_Label_recovery.allowChangePwWithinMinLifetime=Allow Change Password Action if within Password Minimum Lifetime
+Setting_Label_recovery.allowWhenLocked=Allow Forgotten Password when Intruder Locked
 Setting_Label_recovery.enable=Enable Forgotten Password
 Setting_Label_recovery.form=Forgotten Password User Search Form
 Setting_Label_recovery.oauth.idserver.attributesUrl=OAuth Profile Service URL
@@ -1168,3 +1172,7 @@ Setting_Label_webservices.queryMatch=Web Services LDAP Authentication Permission
 Setting_Label_webservices.thirdParty.queryMatch=Web Services LDAP Third Party Permissions
 Setting_Label_webservice.userAttributes=Web Service User Attributes
 Setting_Label_wordlistCaseSensitive=Word List Case Sensitivity
+
+
+
+
