Add person card and table views to Helpdesk Angular module.

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -1,9 +1,14 @@
 {
-  "Title_PeopleSearch": "People Search",
   "Title_Management": "Management",
   "Title_DirectReports": "Direct Report(s)",
+  "Title_HelpDesk": "Help Desk",
+  "Title_HelpDeskCard": "Help Desk Cards",
+  "Title_HelpDeskTable": "Help Desk Table",
   "Title_Organization": "Organization",
   "Title_OrgChart": "Organizational Chart",
+  "Title_PeopleSearch": "People Search",
+  "Title_PeopleSearchCard": "People Search Cards",
+  "Title_PeopleSearchTable": "People Search Table",
   "Title_Details": "Details",
 
   "Display_PleaseWait": "Loading...",
