Added the option to use zxcvbn for password meter strength estimation.
This feature can be enabled under Settings > Modules > Authenticated > Change Password > Use zxcvbn for Strength Meter Algorithm.

See:
https://github.com/dropbox/zxcvbn
https://www.usenix.org/system/files/conference/usenixsecurity16/sec16_paper_wheeler.pdf

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -549,6 +549,7 @@ Setting_Description_password.sharedHistory.age=Specify the maximum age of the sh
 Setting_Description_password.sharedHistory.enable=Enable this option to use a global shared password history for all users.  If enabled, all users share a common password history.  This helps prevent users from using common organizational words as passwords.  @PwmAppName@ stores the passwords as a salted and encrypted hash in the LocalDB.
 Setting_Description_password.showAutoGen=Enable this option to display a link to users during the change password process that displays a list of auto-generated sample passwords that the system allows through the configured password policies.  The users have the option to select and use one of the values in the list.  If this option does not force the user to choose a password from the list.
 Setting_Description_password.showStrengthMeter=Enable this option to allow the users to see the password strength meter on the change password screen.
+Setting_Description_password.useZxcvbnForStrengthMeter=Enable this option to use the popular open-source library: zxcvbn, a password strength estimator inspired by password crackers.
 Setting_Description_passwordSync.enableReplicaCheck=Enable this option to check for the password to be updated on all configured replicas (for a user's LDAP Profile).  When enabled, replica sync checking polls all of the configured replicas on the user's LDAP Profile to determine if the password change time has been updated.  The particular method to determine the last password change time varies per LDAP vendor type.
 Setting_Description_passwordSyncMaxWaitTime=Specify how long, during a password change, the system waits for the password to be synchronized to all configured LDAP servers.  In cases where the synchronization might take an extraordinary amount of time, this setting prevents the page from timing out.<br/><br/>Specify the value in seconds.
 Setting_Description_passwordSyncMinWaitTime=Specify how long, during a password change, the system waits before forwarding the user.  This gives any background synchronization processes time to execute before the user executes the next operation.<br/><br/>Specify the value in seconds.
@@ -1029,6 +1030,7 @@ Setting_Label_password.sharedHistory.age=Shared History Age
 Setting_Label_password.sharedHistory.enable=Enable Shared History
 Setting_Label_password.showAutoGen=Show Auto Generate Randoms
 Setting_Label_password.showStrengthMeter=Show Strength Meter
+Setting_Label_password.useZxcvbnForStrengthMeter=Use zxcvbn for Strength Meter Algorithm
 Setting_Label_passwordSync.enableReplicaCheck=Password Sync Enable Replication Checking
 Setting_Label_passwordSyncMaxWaitTime=Password Change Maximum Wait Time
 Setting_Label_passwordSyncMinWaitTime=Password Change Minimum Wait Time
