--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -124,9 +124,11 @@ Display_PasswordExpired=Your password has expired.  You must set a new password 
 Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real words to make them easier to remember, but have been modified to make them difficult to guess.
 Display_PasswordNoExpire=Your password does not expire.
 Display_PasswordPrompt=Please type your new password
+Display_PasswordStrengthVeryHigh=Strength\: <b>Very Strong</b>
 Display_PasswordStrengthHigh=Strength\: <b>Strong</b>
-Display_PasswordStrengthLow=Strength\: <b>Weak</b>
 Display_PasswordStrengthMedium=Strength\: <b>Good</b>
+Display_PasswordStrengthLow=Strength\: <b>Weak</b>
+Display_PasswordStrengthVeryLow=Strength\: <b>Very Weak</b>
 Display_PasswordReplicationStatus=Password replication (progress %1%)
 Display_PasswordWarn=<b>Your password will soon expire</b>.  Please change your password soon to avoid problems accessing this service.  <br/><br/>Your password will expire on %1%.
 Display_PeopleSearch=Please type your search query below.  You may search for a person based on name, email address or telephone number.
