Get Helpdesk detail page working on development side only

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -10,6 +10,9 @@
   "Title_PeopleSearchCard": "People Search Cards",
   "Title_PeopleSearchTable": "People Search Table",
   "Title_Details": "Details",
+  "Title_ChangePassword": "Change Password",
+  "Title_Unlock": "Unlock",
+  "Title_Refresh": "Refresh",
 
   "Display_PleaseWait": "Loading...",
 
