--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1198,3 +1198,14 @@ Setting_Label_webservices.queryMatch=Web Services LDAP Authentication Permission
 Setting_Label_webservices.thirdParty.queryMatch=Web Services LDAP Third Party Permissions
 Setting_Label_webservice.userAttributes=Web Service User Attributes
 Setting_Label_wordlistCaseSensitive=Word List Case Sensitivity
+
+Category_Description_PW_EXP_NOTIFY=Password Expiration Notification
+Category_Label_PW_EXP_NOTIFY=Password Expiration Notification
+
+Setting_Label_pwExpiryNotify.enable=Enable Password Expiration Notification
+Setting_Label_pwExpiryNotify.queryString=Expiration Notification User Match
+Setting_Label_pwExpiryNotify.intervals=Expiration Notification Intervals
+Setting_Description_pwExpiryNotify.enable=Enable Password Expiration Notification
+Setting_Description_pwExpiryNotify.queryString=Expiration Notification User Match
+Setting_Description_pwExpiryNotify.intervals=Expiration Notification Intervals
+
