--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -1,28 +1,30 @@
 {
-  "Title_Management": "Management",
+  "Button_Attributes": "User Data",
+  "Button_Email": "Email",
+  "Button_OTP": "OTP",
+  "Button_SMS": "SMS",
+  "Button_Verify": "Verify",
+  "Display_HelpdeskOtpValidation": "Instruct the user to load their mobile authentication app and share the current pass code.",
+  "Display_PleaseWait": "Loading...",
+  "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
+  "Display_SearchResultsNone": "No results",
+  "Display_TokenDestination": "Token Destination",
+  "Long_Title_VerificationSend": "Before this user can be selected, the user's identity must be verified.  Please select a verification method.",
+  "Placeholder_Search": "Search",
+  "Title_ChangePassword": "Change Password",
+  "Title_Details": "Details",
   "Title_DirectReports": "Direct Report(s)",
   "Title_HelpDesk": "Help Desk",
   "Title_HelpDeskCard": "Help Desk Cards",
   "Title_HelpDeskTable": "Help Desk Table",
+  "Title_Management": "Management",
   "Title_Organization": "Organization",
   "Title_OrgChart": "Organizational Chart",
   "Title_PeopleSearch": "People Search",
   "Title_PeopleSearchCard": "People Search Cards",
   "Title_PeopleSearchTable": "People Search Table",
-  "Title_Details": "Details",
-  "Title_ChangePassword": "Change Password",
-  "Title_Unlock": "Unlock",
   "Title_Refresh": "Refresh",
-
-  "Display_PleaseWait": "Loading...",
-
-  "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
-  "Display_SearchResultsNone": "No results",
-
-  "Placeholder_Search": "Search",
-
-  "Button_Attributes": "User Data",
-  "Button_Email": "Email",
-  "Button_OTP": "OTP",
-  "Button_SMS": "SMS"
+  "Title_Unlock": "Unlock",
+  "Title_ValidateCode": "Validate Code",
+  "Title_VerificationSend": "Select verification method"
 }
