Finish Verifications dialog. Add the Recent Verifications dialog.

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -1,14 +1,21 @@
 {
   "Button_Attributes": "User Data",
+  "Button_Cancel": "Cancel",
   "Button_Email": "Email",
+  "Button_OK": "OK",
   "Button_OTP": "OTP",
   "Button_SMS": "SMS",
+  "Button_Verifications": "Verifications",
   "Button_Verify": "Verify",
   "Display_HelpdeskOtpValidation": "Instruct the user to load their mobile authentication app and share the current pass code.",
   "Display_PleaseWait": "Loading...",
   "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
   "Display_SearchResultsNone": "No results",
   "Display_TokenDestination": "Token Destination",
+  "Field_DateTime": "Date/Time",
+  "Field_LdapProfile": "LDAP Profile",
+  "Field_Method": "Method",
+  "Field_Username": "User Name",
   "Long_Title_VerificationSend": "Before this user can be selected, the user's identity must be verified.  Please select a verification method.",
   "Placeholder_Search": "Search",
   "Title_ChangePassword": "Change Password",
@@ -23,6 +30,7 @@
   "Title_PeopleSearch": "People Search",
   "Title_PeopleSearchCard": "People Search Cards",
   "Title_PeopleSearchTable": "People Search Table",
+  "Title_RecentVerifications": "Recent Verifications",
   "Title_Refresh": "Refresh",
   "Title_Unlock": "Unlock",
   "Title_ValidateCode": "Validate Code",
