--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -1,24 +1,33 @@
 {
   "Button_Attributes": "User Data",
   "Button_Cancel": "Cancel",
+  "Button_ChangePassword": "Change Password",
+  "Button_ClearResponses": "Clear Answers",
+  "Button_Delete": "Delete",
   "Button_Email": "Email",
+  "Button_GoBack": "Go Back",
+  "Button_HelpdeskClearOtpSecret": "Clear OTP Secret",
   "Button_OK": "OK",
   "Button_OTP": "OTP",
   "Button_SMS": "SMS",
+  "Button_Unlock": "Unlock",
   "Button_Verifications": "Verifications",
   "Button_Verify": "Verify",
+  "Display_CaptchaRefresh": "Refresh",
   "Display_HelpdeskOtpValidation": "Instruct the user to load their mobile authentication app and share the current pass code.",
   "Display_PleaseWait": "Loading...",
   "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
   "Display_SearchResultsNone": "No results",
   "Display_TokenDestination": "Token Destination",
   "Field_DateTime": "Date/Time",
+  "Field_Display": "Display",
   "Field_LdapProfile": "LDAP Profile",
   "Field_Method": "Method",
+  "Field_Policy": "Policy",
+  "Field_Profile": "Profile",
   "Field_Username": "User Name",
   "Long_Title_VerificationSend": "Before this user can be selected, the user's identity must be verified.  Please select a verification method.",
   "Placeholder_Search": "Search",
-  "Title_ChangePassword": "Change Password",
   "Title_Details": "Details",
   "Title_DirectReports": "Direct Report(s)",
   "Title_HelpDesk": "Help Desk",
@@ -31,8 +40,9 @@
   "Title_PeopleSearchCard": "People Search Cards",
   "Title_PeopleSearchTable": "People Search Table",
   "Title_RecentVerifications": "Recent Verifications",
-  "Title_Refresh": "Refresh",
-  "Title_Unlock": "Unlock",
+  "Title_SecurityResponses": "Security Responses",
+  "Title_Status": "Status",
+  "Title_UserEventHistory": "Password History",
   "Title_ValidateCode": "Validate Code",
   "Title_VerificationSend": "Select verification method"
 }
