Implement rest of HelpDesk detail page buttons and their respective dialogs and API calls

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -3,6 +3,8 @@
   "Button_Cancel": "Cancel",
   "Button_ChangePassword": "Change Password",
   "Button_ClearResponses": "Clear Answers",
+  "Button_CloseWindow": "Close Window",
+  "Button_Confirm": "Confirm",
   "Button_Delete": "Delete",
   "Button_Email": "Email",
   "Button_GoBack": "Go Back",
@@ -13,6 +15,8 @@
   "Button_Unlock": "Unlock",
   "Button_Verifications": "Verifications",
   "Button_Verify": "Verify",
+  "Confirm": "Are you sure you wish to proceed?",
+  "Confirm_DeleteUser": "Are you sure you wish to proceed?  If you continue, the selected user will be deleted permanently.  This can not be undone.",
   "Display_CaptchaRefresh": "Refresh",
   "Display_HelpdeskOtpValidation": "Instruct the user to load their mobile authentication app and share the current pass code.",
   "Display_PleaseWait": "Loading...",
@@ -42,6 +46,7 @@
   "Title_RecentVerifications": "Recent Verifications",
   "Title_SecurityResponses": "Security Responses",
   "Title_Status": "Status",
+  "Title_Success": "Success",
   "Title_UserEventHistory": "Password History",
   "Title_ValidateCode": "Validate Code",
   "Title_VerificationSend": "Select verification method"
