--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -145,7 +145,13 @@ Display_RecoverChoiceUnlock=Unlock your account.  If you remember your password,
 Display_RecoverEnterCode=To verify your identity, a security code has been sent to you at %1%.  Please click the link in the email or copy and paste the security code here.
 Display_RecoverEnterCodeSMS=To verify your identity, a security code has been sent to your phone at %1%.  Please enter the security code in the message here.
 Display_RecoverPassword=Please answer the following questions. If you answer these questions correctly, you will then be able to reset your password.
-Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or by changing your password.
+Display_RecoverPasswordChoices=Your account has been locked due to excessive incorrect login attempts.  You may continue by unlocking your account or You may change your password even though your previous password change was recent and less than the Lifetime delay.
+Display_RecoverMinLifetimeChoices=You may continue by changing your password and then attempt to login again.
+Display_RecoverWithinMinLifetimeChoices=You may continue by changing your password even though you are within the minimum lifetime password value.
+Display_IntruderMessage=Your account has been locked due to excessive incorrect login attempts. 
+Display_IntruderUnlock=You may try unlocking your account and logging in.
+Display_OrOption=or
+Display_IntruderChangePassword=You may change your password to unlock your account which was locked by intruder detection.
 Display_RecoverRandomResponses=You must answer the following questions to continue.
 Display_RecoverRequiredResponses=These questions are required by your administrator.
 Display_RecoverOTP=To verify your identity, please use your mobile device to generate your security code.
