Implement Change Password dialog on HelpDesk detail page - part 1 (random passwords dialog)

--- a/client/src/i18n/translations_en.json
+++ b/client/src/i18n/translations_en.json
@@ -9,6 +9,7 @@
   "Button_Email": "Email",
   "Button_GoBack": "Go Back",
   "Button_HelpdeskClearOtpSecret": "Clear OTP Secret",
+  "Button_More": "More",
   "Button_OK": "OK",
   "Button_OTP": "OTP",
   "Button_SMS": "SMS",
@@ -19,6 +20,7 @@
   "Confirm_DeleteUser": "Are you sure you wish to proceed?  If you continue, the selected user will be deleted permanently.  This can not be undone.",
   "Display_CaptchaRefresh": "Refresh",
   "Display_HelpdeskOtpValidation": "Instruct the user to load their mobile authentication app and share the current pass code.",
+  "Display_PasswordGeneration": "The following passwords have been randomly generated for you.  These passwords are based on real words to make them easier to remember, but have been modified to make them difficult to guess.",
   "Display_PleaseWait": "Loading...",
   "Display_SearchResultsExceeded": "Search results exceeded maximum search size",
   "Display_SearchResultsNone": "No results",
@@ -43,6 +45,7 @@
   "Title_PeopleSearch": "People Search",
   "Title_PeopleSearchCard": "People Search Cards",
   "Title_PeopleSearchTable": "People Search Table",
+  "Title_RandomPasswords": "Random Passwords",
   "Title_RecentVerifications": "Recent Verifications",
   "Title_SecurityResponses": "Security Responses",
   "Title_Status": "Status",
